--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                 <input type="text" id="address"><br>
                 <label for="num">Phone Number: </label>
                 <input type="number" id="num"><br>
-                <input type="submit" placeholder="submit" onClick="postFunc()">
+                <input type="submit" placeholder="submit" onClick="validate()">
             </form:form>
             <br>
 
